# godwoken

crates/benches/benches/benchmarks/: smt.rs
crates/block-producer/: Cargo.toml
crates/block-producer/src/: block_producer.rs
crates/chain/: Cargo.toml
crates/challenge/: Cargo.toml
crates/ckb-hardfork/: Cargo.toml
crates/config/: Cargo.toml
crates/db/src/: db.rs  transaction.rs
crates/dynamic-config/: Cargo.toml
crates/generator/: Cargo.toml
crates/generator/src/: generator.rs
crates/generator/src/syscalls/: mod.rs
crates/jsonrpc-types/: Cargo.toml
crates/mem-pool/src/: batch.rs  pool.rs
crates/replay-chain/: Cargo.toml
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: indexer_client.rs  rpc_client.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: registry.rs
crates/rpc-ws-server/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: store_impl.rs  transaction.rs
crates/store/src/smt/: mem_pool_smt_store.rs  smt_store.rs
crates/store/src/transaction/: store_transaction.rs
crates/tests/: Cargo.toml
crates/tools/: Cargo.toml
crates/tools/src/: godwoken_rpc.rs  main.rs
crates/tools/src/stat/: mod.rs
crates/types/: Cargo.toml
crates/types/src/offchain/: rpc.rs
crates/web3-indexer/: Cargo.toml
