[package]
name = "gw-config"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-jsonrpc-types = { path = "../jsonrpc-types" }
ckb-fixed-hash = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
serde = { version = "1.0", features = ["derive"] }
