[package]
name = "gw-jsonrpc-types"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
faster-hex = "0.4"
gw-types = { path = "../types" }
gw-common = { path = "../common" }
ckb-jsonrpc-types = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-fixed-hash = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
anyhow = "1.0"
