[package]
name = "gw-tests"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../types" }
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-db = { path = "../db" }
gw-store = { path = "../store" }
gw-traits = { path = "../traits" }
gw-generator = { path = "../generator", features = ["enable-always-success-lock"] }
gw-chain = { path = "../chain" }
gw-mem-pool = { path = "../mem-pool" }
gw-block-producer = { path = "../block-producer" }
gw-rpc-server = { path = "../rpc-server" }
gw-rpc-client = { path = "../rpc-client" }
anyhow = "1.0"
blake2b-rs = "0.2"
ckb-vm = { git = "https://github.com/zzhengzhuo/ckb-vm.git", branch = "0.20.0-rc6", features = [
    "detect-asm",
] }
ckb-vm-definitions = "=0.20.0-rc5"
thiserror = "1.0"
lazy_static = "1.4"
secp256k1 = { version = "0.20", features = ["recovery"] }
sha3 = "0.9.1"
hex = "0.4.2"
ckb-script = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-types = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-error = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-crypto = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-hash = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-traits = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
ckb-fixed-hash = { git = "https://github.com/zzhengzhuo/ckb.git", branch = "v0.100.0-rc1" }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
smol = "1.2.5"
env_logger = "0.8"
tempfile = "3"
async-jsonrpc-client = { version = "0.3.0", default-features = false, features = ["http-async-std"] }
